@@ -12,3 +12,9 @@
 # Values:  TEXT
 #
 failregex = [[]client (?P<host>\S*)[]] user .*(?:: authentication failure|not found)
+
+# Option:  ignoreregex
+# Notes.:  regex to ignore. If this regex matches, the line is ignored.
+# Values:  TEXT
+#
+#ignoreregex = user: myusername
