@@ -13,3 +13,9 @@
 # Values:  TEXT
 #
 failregex = LOGIN FAILED, ip=\[::ffff:(?P<host>\S*)\]$
+
+# Option:  ignoreregex
+# Notes.:  regex to ignore. If this regex matches, the line is ignored.
+# Values:  TEXT
+#
+#ignoreregex = user: myusername
