@@ -12,3 +12,9 @@
 # Values:  TEXT
 #
 failregex = reject: RCPT from (.*)\[(?P<host>\S*)\]: 554
+
+# Option:  ignoreregex
+# Notes.:  regex to ignore. If this regex matches, the line is ignored.
+# Values:  TEXT
+#
+#ignoreregex = user: myusername
