@@ -66,15 +66,17 @@ action   = iptables[name=SSH, port=ssh, protocol=tcp]
 logpath  = /var/log/sshd.log
 maxretry = 5
 
-# Here we use TCP-Wrappers instead of Netfilter/Iptables.
+# Here we use TCP-Wrappers instead of Netfilter/Iptables. "ignoreregex" is
+# used to avoid banning the user "myuser".
 
 [ssh-tcpwrapper]
 
-enabled  = false
-filter   = sshd
-action   = hostsdeny
-           mail-whois[name=SSH, dest=yourmail@mail.com]
-logpath  = /var/log/sshd.log
+enabled     = false
+filter      = sshd
+action      = hostsdeny
+              mail-whois[name=SSH, dest=yourmail@mail.com]
+ignoreregex = for myuser from
+logpath     = /var/log/sshd.log
 
 # This jail demonstrates the use of wildcards in "logpath".
 # Moreover, it is possible to give other files on a new line.
